# agentgate

./: .dockerignore  .env.example  .gitignore  CONFIG.md  CONTRIBUTING.md  Dockerfile  PUBLISHING.md  README.md  docker-compose.override.example.yml  docker-compose.production.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_order.txt
.changeset/: agent-identity-phase1-close.md  config.json  governance-dashboard.md  roadmap-features.md  thirty-ideas-release.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  publish-mcp.yml  release.yml  security-scan.yml
_bmad-output/implementation-artifacts/: sprint-status.yaml  tech-spec-agentgate-review-fixes.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
action/: README.md  action.yml  package.json  tsconfig.json
action/src/: index.test.ts  index.ts
demo/: demo-script.sh  demo.cast  demo2.cast  demo2.sh  demo3.cast  demo3.sh  full-demo.cast  full-demo.sh  record-demo.sh  render-frames.js
docs/: agent-identity.md  api.md  cli.md  configuration.md  decision-tokens.md  docker.md  events.md  getting-started.md  github-action.md  governance.md  index.md  mcp.md  policies.md  sdk.md  troubleshooting.md
infra/: README.md  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/src/agentgate/: __init__.py  client.py  errors.py  types.py
sdk/python/tests/: test_client.py
specs/: agentgate-v0.4.md
tasks/: active.json
(+13 files in other folders)
